updated social media

--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
             <li class="mobile-menu-active"><a href="contact.html">CONTACT</a></li>
         </ul>
         <ul class="social-links">
-            <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
-            <a href="#"><li><i class="fab fa-twitter"></i></li></a>
-            <a href="#"><li><i class="fab fa-instagram"></i></li></a>
+            <a href="https://www.facebook.com/joo.themes"><li><i class="fab fa-facebook-f"></i></li></a>
+            <a href="https://twitter.com/bogus_tweets"><li><i class="fab fa-twitter"></i></li></a>
+            <a href="https://www.instagram.com/joo.theme.3/"><li><i class="fab fa-instagram"></i></li></a>
         </ul>
     </nav>
     <header>
@@ -44,9 +44,9 @@
                     <li><a href="contact.html" class="active">CONTACT</a></li>
                 </ul>
                 <ul class="social-links">
-                    <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
-                    <a href="#"><li><i class="fab fa-twitter"></i></li></a>
-                    <a href="#"><li><i class="fab fa-instagram"></i></li></a>
+                    <a href="https://www.facebook.com/joo.themes"><li><i class="fab fa-facebook-f"></i></li></a>
+                    <a href="https://twitter.com/bogus_tweets"><li><i class="fab fa-twitter"></i></li></a>
+                    <a href="https://www.instagram.com/joo.theme.3/"><li><i class="fab fa-instagram"></i></li></a>
                 </ul>
             </nav>
         </div>
@@ -85,9 +85,9 @@
                     <li><span><i class="fas fa-envelope"></i></i></span><a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&to=test@test.com">timive@jooburger.com</a></li>
                     <li>
                         <ul class="social-links">
-                            <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
-                            <a href="#"><li><i class="fab fa-twitter"></i></li></a>
-                            <a href="#"><li><i class="fab fa-instagram"></i></li></a>
+                            <a href="https://www.facebook.com/joo.themes"><li><i class="fab fa-facebook-f"></i></li></a>
+                            <a href="https://twitter.com/bogus_tweets"><li><i class="fab fa-twitter"></i></li></a>
+                            <a href="https://www.instagram.com/joo.theme.3/"><li><i class="fab fa-instagram"></i></li></a>
                         </ul>
                     </li>
                 </ul>
@@ -150,9 +150,9 @@
                 <div class="section-wrap">
                     <p><span>Joo</span> &copy 2020. All Rights Reserved.</p>
                     <ul class="social-links">
-                        <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
-                        <a href="#"><li><i class="fab fa-twitter"></i></li></a>
-                        <a href="#"><li><i class="fab fa-instagram"></i></li></a>
+                        <a href="https://www.facebook.com/joo.themes"><li><i class="fab fa-facebook-f"></i></li></a>
+                        <a href="https://twitter.com/bogus_tweets"><li><i class="fab fa-twitter"></i></li></a>
+                        <a href="https://www.instagram.com/joo.theme.3/"><li><i class="fab fa-instagram"></i></li></a>
                     </ul>
                     <ul class="footer-nav">
                         <li><a href="index.html">Home</a></li>
