--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
         <ul class="social-links">
-            <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
-            <a href="#"><li><i class="fab fa-twitter"></i></li></a>
-            <a href="#"><li><i class="fab fa-instagram"></i></li></a>
+            <a href="https://www.facebook.com/joo.themes"><li><i class="fab fa-facebook-f"></i></li></a>
+            <a href="https://twitter.com/bogus_tweets"><li><i class="fab fa-twitter"></i></li></a>
+            <a href="https://www.instagram.com/joo.theme.3/"><li><i class="fab fa-instagram"></i></li></a>
         </ul>
     </nav>
     <header>
@@ -44,9 +44,9 @@
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
                 <ul class="social-links">
-                    <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
-                    <a href="#"><li><i class="fab fa-twitter"></i></li></a>
-                    <a href="#"><li><i class="fab fa-instagram"></i></li></a>
+                    <a href="https://www.facebook.com/joo.themes"><li><i class="fab fa-facebook-f"></i></li></a>
+                    <a href="https://twitter.com/bogus_tweets"><li><i class="fab fa-twitter"></i></li></a>
+                    <a href="https://www.instagram.com/joo.theme.3/"><li><i class="fab fa-instagram"></i></li></a>
                 </ul>
             </nav>
         </div>
@@ -194,15 +194,15 @@
             <div class="section-row container">
                 <div class="section-wrap">
                     <a href="https://www.instagram.com/p/BwP0NZVlfv6/" target="_blank">
-                        <img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/56161539_2135183743440007_6042338864626323758_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=qOaMy60tDqcAX_2VHlN&oh=27d231d79ff054a556ac2d11a7737f4a&oe=5F04E758" alt="1">
+                        <img src="./dist/images/instagram_1.jpg" alt="1">
                         <div class="tint"></div>
                     </a>
                     <a href="https://www.instagram.com/p/BwP0LvTlvpH/" target="_blank">
-                        <img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/57052974_2148585461903889_953847305816317733_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=JO54Ur_vtc4AX-h9bkH&oh=e737c4d437d6d57a210e0cef4f5ccfbe&oe=5F05B435" alt="2">
+                        <img src="./dist/images/instagram_2.jpg" alt="2">
                         <div class="tint"></div>
                     </a>
                     <a href="https://www.instagram.com/p/BwP0KLQlt5u/" target="_blank">
-                        <img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/56368871_142388940145748_2351320277140203970_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=BUSKqhsaERUAX_Ojbx8&oh=2191bc471c410da83c009d0284264c40&oe=5F042AD6" alt="3">
+                        <img src="./dist/images/instagram_3.jpg" alt="3">
                         <div class="tint"></div>
                     </a>
                 </div>
@@ -210,15 +210,15 @@
             <div class="section-row container">
                 <div class="section-wrap">
                     <a href="https://www.instagram.com/p/BwP0INNlPel/" target="_blank">
-                        <img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/56520200_2302680210055036_3764346179199451573_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=Z_k-O-wscFYAX_szl3m&oh=4b143ba1fe2bb8f5636fd9dd64ac3daa&oe=5F033E5C" alt="4">
+                        <img src="./dist/images/instagram_4.jpg" alt="4">
                         <div class="tint"></div>
                     </a>
                     <a href="https://www.instagram.com/p/BwP0GbslBi5/" target="_blank">
-                        <img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/56980894_2291790727592062_1249643365082704656_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=O4O9sGlfqEUAX8f2Zq1&oh=a562b13e5060eb7d35326635c1ec3b0d&oe=5F04D5EE" alt="5">
+                        <img src="./dist/images/instagram_5.jpg" alt="5">
                         <div class="tint"></div>
                     </a>
                     <a href="https://www.instagram.com/p/BwP0EfMFTuc/" target="_blank">
-                        <img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/57487896_1112360612279322_9077064914643657958_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=k6Ow2rwQAYgAX-C24s4&oh=d0bea501c9a80747b8ec38e0faf187fc&oe=5F05B2E2" alt="6">
+                        <img src="./dist/images/instagram_6.jpg" alt="6">
                         <div class="tint"></div>
                     </a>
                 </div>
@@ -280,9 +280,9 @@
                 <div class="section-wrap">
                     <p><span>Joo</span> &copy 2020. All Rights Reserved.</p>
                     <ul class="social-links">
-                        <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
-                        <a href="#"><li><i class="fab fa-twitter"></i></li></a>
-                        <a href="#"><li><i class="fab fa-instagram"></i></li></a>
+                        <a href="https://www.facebook.com/joo.themes"><li><i class="fab fa-facebook-f"></i></li></a>
+                        <a href="https://twitter.com/bogus_tweets"><li><i class="fab fa-twitter"></i></li></a>
+                        <a href="https://www.instagram.com/joo.theme.3/"><li><i class="fab fa-instagram"></i></li></a>
                     </ul>
                     <ul class="footer-nav">
                         <li><a href="index.html">Home</a></li>
