--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
         <ul class="social-links">
-            <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
-            <a href="#"><li><i class="fab fa-twitter"></i></li></a>
-            <a href="#"><li><i class="fab fa-instagram"></i></li></a>
+            <a href="https://www.facebook.com/joo.themes"><li><i class="fab fa-facebook-f"></i></li></a>
+            <a href="https://twitter.com/bogus_tweets"><li><i class="fab fa-twitter"></i></li></a>
+            <a href="https://www.instagram.com/joo.theme.3/"><li><i class="fab fa-instagram"></i></li></a>
         </ul>
     </nav>
     <header>
@@ -44,9 +44,9 @@
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
                 <ul class="social-links">
-                    <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
-                    <a href="#"><li><i class="fab fa-twitter"></i></li></a>
-                    <a href="#"><li><i class="fab fa-instagram"></i></li></a>
+                    <a href="https://www.facebook.com/joo.themes"><li><i class="fab fa-facebook-f"></i></li></a>
+                    <a href="https://twitter.com/bogus_tweets"><li><i class="fab fa-twitter"></i></li></a>
+                    <a href="https://www.instagram.com/joo.theme.3/"><li><i class="fab fa-instagram"></i></li></a>
                 </ul>
             </nav>
         </div>
@@ -204,9 +204,9 @@
                 <div class="section-wrap">
                     <p><span>Joo</span> &copy 2020. All Rights Reserved.</p>
                     <ul class="social-links">
-                        <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
-                        <a href="#"><li><i class="fab fa-twitter"></i></li></a>
-                        <a href="#"><li><i class="fab fa-instagram"></i></li></a>
+                        <a href="https://www.facebook.com/joo.themes"><li><i class="fab fa-facebook-f"></i></li></a>
+                        <a href="https://twitter.com/bogus_tweets"><li><i class="fab fa-twitter"></i></li></a>
+                        <a href="https://www.instagram.com/joo.theme.3/"><li><i class="fab fa-instagram"></i></li></a>
                     </ul>
                     <ul class="footer-nav">
                         <li><a href="index.html">Home</a></li>
